# ucl2011final-network

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
data/: barca_manutd_2011_events.csv
docs/proposal/: main.fdb_latexmk  main.fls  main.tex
src/analysis/: community_detection.py  macro_micro_metrics.py  network_construction.py
src/api/: data_loader.py  image_loader.py
src/plotting/: passing_nx.py
