[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ucl2011final-network"
version = "0.1.0"
description = "Network analysis of the UEFA Champions League 2011 final between FC Barcelona and Manchester United FC."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
  {name = "Ravneet-Rahul Sandhu Singh", email = "rahulsandhu542001@gmail.com"},
  {name = "Sofía González Estrada", email = "sofigonzalez2012@gmail.com"},
  {name = "Teferi Mekonnen Yitayew", email = "example@gmail.com"}
]
keywords = [
  "football", "network", "fcb", "messi", "ucl2011", 
  "manutd", "tiki-taka", "data-analysis", 
  "sports-analytics"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"] 

[project.urls]
Homepage = "https://github.com/RahulSandhu/ucl2011final-network"
Repository = "https://github.com/RahulSandhu/ucl2011final-network"
